# video-uploader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Tasks.md  docker-compose.yml  pyproject.toml
.docs/: API_doc.md  CLAUDE.md  Events-Logging.md  Tasks.md  VU_API.md  basic_doc.md
.github/workflows/: ci.yml
config/: groups.yaml.example
scripts/: smoke_s3.py
src/: config.py
src/lms/: __init__.py
src/logging_setup/: factory.py
src/scanner/: scanner.py
src/state/: __init__.py
src/storage/: __init__.py
src/video_ingest/: __init__.py  main.py
src/video_ingest/api/: __init__.py  (+1 more)
tests/: test_config.py  test_groups.py  test_main.py  test_pipeline.py  test_scaffold.py
tests/api/: test_app.py
tests/domain/: test_events.py  test_models.py
tests/lms/: test_client.py
tests/logging_setup/: test_factory.py  test_loki.py
tests/metadata/: test_filename.py  test_filestat.py
tests/resolving/: test_resolver.py
tests/scanner/: test_scanner.py  test_stability.py
tests/state/: test_repository.py
tests/storage/: test_key_builder.py  test_s3_gateway.py
video_uploader/: config.py  main.py  pipeline.py
video_uploader/api/: app.py
video_uploader/domain/: events.py  models.py
video_uploader/lms/: client.py
video_uploader/logging_setup/: __init__.py  factory.py  loki.py  telegram.py
video_uploader/metadata/: filename.py  filestat.py
video_uploader/notifications/: __init__.py  telegram.py
video_uploader/resolving/: resolver.py
video_uploader/scanner/: scanner.py  stability.py
video_uploader/state/: repository.py
(+16 files in other folders)
